# particle-system-rs

./: Cargo.toml  LICENSE
src/: animation.rs  camera.rs  main.rs  particles.rs  point.rs
src/kernels/: particles.cl  test.cl
src/shaders/: blur_quad.frag  blur_quad.vert  circle.frag  circle.vert  default.frag  default.frag.glsl  default.geom  default.vert  default.vert.glsl  particles.frag  particles.geom  particles.vert
