[package]
name = "particle-system-rs"
version = "0.1.0"
authors = ["Clément Renault <renault.cle@gmail.com>"]

[dependencies]
glium = "0.14"
piston2d-glium_graphics = "0.26"
piston = "0.23"
conrod = "0.36"
nalgebra = "0.8"
cgl = "0.1"
ocl = { git = "https://github.com/Kerosene2000/ocl.git", rev = "6a0f77f" }
time = "0.1"
colorify = "0.2"
fps_counter = "0.2"
rustyline = "0.2"
