[package]
name = "particle-system-rs"
version = "0.1.0"
authors = ["Clément Renault <renault.cle@gmail.com>"]

[dependencies]
gfx = "0.12.1"
gfx_window_glutin = "0.12.0"
glutin = "0.6.1"
nalgebra = "0.10.1"

cgl = "0.1"
ocl = { git = "https://github.com/Kerosene2000/ocl.git", rev = "a2e5480" }
colorify = "0.2"
fps_counter = "0.2"
hertz = "0.2"
